Fix link visibility
Change link color from green to white since green would be hard to see
on the greenish background.

--- a/styles.css
+++ b/styles.css
@@ -148,10 +148,6 @@ p
     text-align: center;
     color: white;
 }
-.sidebar p a:link
-{
-    color: green; 
-}
 
 .sidebar p a:visited
 {
